--- a/app/styles/helpers/_variables.scss
+++ b/app/styles/helpers/_variables.scss
@@ -1,7 +1,7 @@
 // Site Colours
-
-// Site fonts
-$site-primary-font: 'Helvetica';
+$base-color-a: #FA6900; // elements colour
+$base-colour-b: #23293F; // background colour
+$base-colour-c: #131829; // overlay colour
 
 // Media Queries Breakpoints
 $bp-xxs: 320px;
